--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <div class="column is-narrow ml-2">
                 <span class="span-partners is-family-secondary has-text-grey-dark has-text-weight-medium is-size-6 is-size-7-mobile ml-3" >Partner:</span></div>
               <div class="column is-narrow ml-1 ml-4 mt-1"><a target="_blank" title="Główny Urząd Geodezji i Kartografii" rel="noopener" href="http://www.gugik.gov.pl/">
-                <img class="image-gugik" src="./src/img/logo-gugik.png" /></a>
+                <img class="image-gugik" src="./src/img/logo-gugik-short.png" /></a>
               </div>
               <div class="column">
                 <div class="attrib is-size-7 has-text-weight-light">
