new logo + change in aed form (description input)

--- a/index.html
+++ b/index.html
@@ -157,9 +157,12 @@
           <div class="footer-partners is-white">
             <div class="columns is-vcentered is-mobile is-gapless">
               <div class="column is-narrow ml-2">
-                <span class="span-partners has-text-grey-dark has-text-weight-medium is-size-7-mobile ml-3" >Partner:</span></div>
-              <div class="column is-narrow ml-1 ml-4 mt-1"><a target="_blank" title="Główny Urząd Geodezji i Kartografii" rel="noopener" href="http://www.gugik.gov.pl/">
+                <span class="span-partners has-text-grey-dark has-text-weight-medium is-size-7-mobile ml-3" >Partnerzy:</span></div>
+              <div class="column is-narrow ml-3 mt-1"><a target="_blank" title="Główny Urząd Geodezji i Kartografii" rel="noopener" href="http://www.gugik.gov.pl/">
                 <img class="image-gugik" src="./src/img/logo-gugik-short.png" /></a>
+              </div>
+              <div class="column is-narrow ml-3 mt-1 is-hidden-mobile"><span title="Fundacja Powszechnego Dostępu do Defibrylacji w Polsce">
+                <img class="image-fundacja" src="./src/img/logo-fundacja.png" /></span>
               </div>
               <div class="column">
                 <div class="attrib is-size-7 has-text-weight-light">
