--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
         <script src="./src/other-ui-stuff.js"></script>
         <script src="./src/map.js"></script>
         <script src="./src/osm-integration.js"></script>
+        <script src="./src/pwa-EventListeners.js"></script>
 
         <!-- Cloudflare Web Analytics -->
         <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
