Added slideshow of partners (only mobile)

--- a/index.html
+++ b/index.html
@@ -158,10 +158,17 @@
             <div class="columns is-vcentered is-mobile is-gapless">
               <div class="column is-narrow ml-2">
                 <span class="span-partners has-text-grey-dark has-text-weight-medium is-size-7-mobile ml-3" >Partnerzy:</span></div>
-              <div class="column is-narrow ml-3 mt-1"><a target="_blank" title="Główny Urząd Geodezji i Kartografii" rel="noopener" href="http://www.gugik.gov.pl/">
+
+                <!-- Only mobile start -->
+                <div class="column is-narrow ml-3 mt-1 is-hidden-desktop">
+                  <img id="partners-slideshow" class="image-mobile" src="./src/img/logo-gugik-short.png" />
+                </div>
+                <!-- Only mobile end -->
+
+                <div class="column is-narrow ml-3 mt-1 is-hidden-touch"><a target="_blank" title="Główny Urząd Geodezji i Kartografii" rel="noopener" href="http://www.gugik.gov.pl/">
                 <img class="image-gugik" src="./src/img/logo-gugik-short.png" /></a>
               </div>
-              <div class="column is-narrow ml-3 mt-1 is-hidden-mobile"><span title="Fundacja Powszechnego Dostępu do Defibrylacji w Polsce">
+              <div class="column is-narrow ml-3 mt-1 is-hidden-touch"><span title="Fundacja Powszechnego Dostępu do Defibrylacji w Polsce">
                 <img class="image-fundacja" src="./src/img/logo-fundacja.png" /></span>
               </div>
               <div class="column">
