fix: Add missing script type
Add missing scipt type, without it console log error: `Uncaught SyntaxError: Unexpected token 'export'`

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <script src="./src/other-ui-stuff.js"></script>
         <script src="./src/map.js"></script>
         <script src="./src/osm-integration.js"></script>
-        <script src="./src/pwa-EventListeners.js"></script>
+        <script src="./src/pwa-EventListeners.js" type="module"></script>
 
         <!-- Cloudflare Web Analytics -->
         <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
