--- a/index.html
+++ b/index.html
@@ -172,7 +172,12 @@
                         </svg> Excel</a>
                     <hr>
                     <p>Warstwy dodatkowe:</p>
-                        <button onclick="toggleCustomLayer()" class="button is-success">Włącz/wyłącz</button> warstwę AED <b>mobilnych</b> zebranych z urzędów, które jeszcze nie zostały dodane
+                        <button onclick="toggleCustomLayer()" class="button is-success">
+                          <svg class="icon mr-2" style="width:24px;height:24px" viewBox="0 0 24 24">
+                          <path fill="currentColor" d="M12,18.54L19.37,12.8L21,14.07L12,21.07L3,14.07L4.62,12.81L12,18.54M12,16L3,9L12,2L21,9L12,16M12,4.53L6.26,9L12,13.47L17.74,9L12,4.53Z" />
+                      </svg> Włącz/wyłącz warstwę AED mobilnych</button>
+                      <br />
+                      <span class="has-text-weight-light is-size-7">Warstwa zawiera dane z urzędów, które jeszcze nie zostały dodane</span>
                 </div>
               </div>
 
