--- a/partnerzy.html
+++ b/partnerzy.html
@@ -36,7 +36,7 @@
 
 <body>
 <div class="p-5">
-  <a class="button" href="/">
+  <a class="button" href="./">
     <svg style="width:24px;height:24px" viewBox="0 0 24 24">
         <path fill="currentColor" d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z" />
     </svg>&nbsp;
