--- a/partners.html
+++ b/partners.html
@@ -69,7 +69,13 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./src/css/main.css" />
+    <style>
+      .media
+      {
+        align-items: center !important;
+        justify-content: center !important;
+      }
+    </style>
   </head>
 
   <body>
