--- a/partners.html
+++ b/partners.html
@@ -115,7 +115,7 @@
     <br />
     <section class="hero is-small is-success">
       <div class="hero-body">
-        <p class="title has-text-weight-light">Partnerzy</p>
+        <p class="title has-text-weight-light">Patroni</p>
       </div>
     </section>
     <div class="pb-3 pt-5 pl-5">
