consultants - description in Polish

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           </div>
           <div class="media-content">
             <p class="is-size-6">dr n. med <span class="has-text-weight-semibold">Wiktor Kuliczkowski</span></p>
-            <span class="has-text-weight-light has-text-grey is-size-6">Provincial consultant in the field of cardiology (Dolnośląskie)</span>
+            <span class="has-text-weight-light has-text-grey is-size-6">Konsultant wojewódzki ds. kardiologii (dolnośląskie)</span>
           </div>
         </div>
       </div>
@@ -366,7 +366,7 @@
           <div class="media-content">
             <p class="is-size-6">prof. dr hab. n. med. <span class="has-text-weight-semibold">Andrzej Wysokiński</span>
             </p>
-            <span class="has-text-weight-light has-text-grey is-size-6">Provincial consultant in the field of cardiology (Lubelskie)</span>
+            <span class="has-text-weight-light has-text-grey is-size-6">Konsultant wojewódzki ds. kardiologii (lubelskie)</span>
           </div>
         </div>
       </div>
@@ -382,7 +382,7 @@
           </div>
           <div class="media-content">
             <p class="is-size-6">dr hab.n. med. <span class="has-text-weight-semibold">Łukasz Balwicki</span></p>
-            <span class="has-text-weight-light has-text-grey is-size-6">Provincial consultant in the field of Public Health (Pomorskie)</span>
+            <span class="has-text-weight-light has-text-grey is-size-6">Konsultant wojewódzki ds. zdrowia publicznego (pomorskie)</span>
           </div>
         </div>
       </div>
@@ -398,7 +398,7 @@
           </div>
           <div class="media-content">
             <p class="is-size-6">prof. dr hab. n. med. <span class="has-text-weight-semibold">Marianna Janion</span></p>
-            <span class="has-text-weight-light has-text-grey is-size-6">Provincial consultant in the field of cardiology (Świętokrzyskie)</span>
+            <span class="has-text-weight-light has-text-grey is-size-6">Konsultant wojewódzki ds. kardiologii (świętokrzyskie)</span>
           </div>
         </div>
       </div>
