--- a/index.html
+++ b/index.html
@@ -171,21 +171,21 @@
     <div class="card-content pt-3 pb-3">
       <div class="content" id="sidebar2-content-div">
         <p>Pobierz dane o AED dodanych do OSM:</p>
-        <a class="button is-success" href="./aed_poland.geojson" target="_blank">
+        <a class="button is-success" href="./aed_poland.geojson" target="_blank" download>
           <svg class="icon mr-2" style="width:24px;height:24px" viewBox="0 0 24 24">
             <path
               d="M17.9,17.39C17.64,16.59 16.89,16 16,16H15V13A1,1 0 0,0 14,12H8V10H10A1,1 0 0,0 11,9V7H13A2,2 0 0,0 15,5V4.59C17.93,5.77 20,8.64 20,12C20,14.08 19.2,15.97 17.9,17.39M11,19.93C7.05,19.44 4,16.08 4,12C4,11.38 4.08,10.78 4.21,10.21L9,15V16A2,2 0 0,0 11,18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
               fill="currentColor"/>
           </svg>
           GeoJSON</a>
-        <a class="button is-success" href="./aed_poland.csv" target="_blank">
+        <a class="button is-success" href="./aed_poland.csv" target="_blank" download>
           <svg class="icon mr-2" style="width:24px;height:24px" viewBox="0 0 24 24">
             <path
               d="M14 2H6C4.9 2 4 2.9 4 4V20C4 21.1 4.9 22 6 22H18C19.1 22 20 21.1 20 20V8L14 2M15 16L13 20H10L12 16H9V11H15V16M13 9V3.5L18.5 9H13Z"
               fill="currentColor"/>
           </svg>
           CSV</a>
-        <a class="button is-success" href="./aed_poland.ods" target="_blank">
+        <a class="button is-success" href="./aed_poland.ods" target="_blank" download>
           <svg class="icon mr-2" style="width:24px;height:24px" viewBox="0 0 24 24">
             <path
               d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M15.8,20H14L12,16.6L10,20H8.2L11.1,15.5L8.2,11H10L12,14.4L14,11H15.8L12.9,15.5L15.8,20M13,9V3.5L18.5,9H13Z"
